# zinc

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix  zinc_entry_c.c  zinc_std_c.c
benches/: benches.rs  test.zn
src/: lib.rs  main.rs
tests/: booleans.zn  conditionals.zn  execution_tests.rs  functions.zn  infinite_loop.zn  integers.zn  nested_while.zn  recursion.zn  strings.zn  variables.zn  while_loop.zn
zir/: Cargo.toml
zir/src/: buildfunc.rs  buildnode.rs  interpreter.rs  lib.rs  node.rs  parse.rs  stdlib.rs  zinc.pest
