[package]
name = "zink"
version = "0.3.1"
authors = ["urlordjames (James Connolly) <32751441+urlordjames@users.noreply.github.com>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
zir = { path = "zir", default-features = false }
clap = { version = "3.2", features = [ "derive" ] }
tempfile = { version = "3.3", optional = true }
path-absolutize = { version = "3.0", optional = true }

[target.'cfg(windows)'.dependencies]
cc = { version = "1.0", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[[bench]]
name = "benches"
harness = false
required-features = [ "native", "jit", "interpreter" ]

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }

[features]
default = [ "native", "jit" ]
native = [ "zir/native", "dep:tempfile", "dep:path-absolutize", "dep:cc" ]
jit = [ "zir/jit", "dep:cc" ]
interpreter = [ "zir/interpreter" ]

[profile.release]
lto = "fat"
