[package]
name = "zir"
version = "0.3.1"
authors = ["urlordjames (James Connolly) <32751441+urlordjames@users.noreply.github.com>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
cranelift-frontend = { version = "0.88", optional = true }
cranelift-codegen = { version = "0.88", optional = true }
cranelift-module = { version = "0.88", optional = true }
cranelift-preopt = { version = "0.88", optional = true }
cranelift-object = { version = "0.88", optional = true }
cranelift-jit = { version = "0.88", optional = true }
target-lexicon = { version = "0.12", optional = true }

pest = "2.4"
pest_derive = "2.4"

[features]
default = ["native"]
native = ["codegen", "dep:cranelift-object"]
jit = ["codegen", "dep:cranelift-jit"]
codegen = ["dep:cranelift-frontend", "dep:cranelift-codegen", "dep:cranelift-module", "dep:cranelift-preopt", "dep:target-lexicon"]
interpreter = []
